recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value step
  if (step!=1)
      ^Spiral:6: error: not found: value step
  spiral(step-1,angle,length+increment,increment)
         ^